Ajout de deux bouton: aucun tags, mes tags

--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -2,6 +2,17 @@
 
 <div class="tags_prompt" id="tags_prompt_{{ form_name }}">
   <span class="help">{{ 'tags.help'|trans({}, 'userui') }}</span>
+  
+  {% if display_specials_buttons is defined %}
+    {% if display_specials_buttons == true %}
+      <br />
+      <input class="clear" type="button" value="{{ 'filter.clear'|trans({}, 'userui') }}" />
+      <input type="hidden" class="filter_clear_url" value="{{ path('filter_clear') }}" />
+      <input class="mytags" type="button" value="{{ 'filter.mytags'|trans({}, 'userui') }}" />
+      <input type="hidden" class="filter_mytags_url" value="{{ path('filter_mytags') }}" />
+    {% endif %}
+  {% endif %}
+  
    <input class="tags_prompt_list" id="tags_prompt_list_{{ form_name }}" name="tags" value=""> 
 </div>
 
