--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -21,7 +21,7 @@
         </span> 
         
         <span class="element_author">
-          (<a href="{{ path('show_group', {'slug': element.owner.slug}) }}">{{ element.owner.name }}</a>)
+          (<a href="{{ path('show_user', {'slug': element.owner.slug}) }}">{{ element.owner.name }}</a>)
         </span>
         
         <a class="element_link" href="{{ element.url }}" target="_blank">link</a>
