--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -20,6 +20,7 @@
 	<script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/tags/jquery.autoGrowInput.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/tags/jquery.tagBox.js') }}" type="text/javascript"></script>
+  <script src="{{ asset('js/formdefault/jquery.formdefaults.js') }}" type="text/javascript"></script>
   {% block js %}{% endblock %}
   
 </head>
