--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -36,15 +36,17 @@
     <input class="main" type="submit" value="{{ 'filter.submit'|trans({}, 'userui') }}"/>
   </form>
 
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {'noelements_filter' : true }%}
     
   
   {% if more_count is defined %} 
-   <span class="elements_more">
-     <a href="{{ path('home_more', {'count': more_count}) }}" >
-       {{ 'more'|trans({}, 'userui') }}
-     </a>
-   </span>
+  {% if elements|length %}
+     <span class="elements_more">
+       <a href="{{ path('home_more', {'count': more_count}) }}" >
+         {{ 'more'|trans({}, 'userui') }}
+       </a>
+     </span>
+  {% endif %}
   {% endif %}
   
 {% endblock %}
