--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -44,11 +44,13 @@
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
   {% if more_count is defined %} 
+  {% if elements|length %}
    <span class="elements_more">
      <a href="{{ path('show_group_more', {'count': more_count, 'slug': group.slug}) }}" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
    </span>
+  {% endif %}
   {% endif %}
   
 {% endblock %}
