--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -26,11 +26,13 @@
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
   {% if more_count is defined %} 
+  {% if elements|length %}
    <span class="elements_more">
      <a href="{{ path('show_user_more', {'count': more_count, 'slug': viewed_user.slug}) }}" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
    </span>
+  {% endif %}
   {% endif %}
   
 {% endblock %}
