--- a/src/Muzich/GroupBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/layout.html.twig
@@ -3,6 +3,9 @@
 {% block css %}
 	<link href="{{ asset('bundles/muzichgroups/css/groups.css') }}" rel="stylesheet" media="screen" type="text/css" />
 {% endblock %}
+{% block js %}
+  <script src="{{ asset('bundles/muzichgroups/js/groups.js') }}" type="text/javascript"></script>
+{% endblock %}
 
 {% block main_content %}
   
