--- a/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
@@ -10,7 +10,7 @@
       {% include "MuzichUserBundle:Security:login.html.twig" %}
         
       <a href="#" id="registration_link">
-        {{ 'registration.display'|trans({}, 'navigationui') }} >>
+        {{ 'registration.display'|trans({}, 'navigationui') }} &gt;&gt;
       </a>
     </div>
     
@@ -21,7 +21,7 @@
       {% include "MuzichUserBundle:Registration:register.html.twig" %}
         
       <a href="#" id="login_link">
-        {{ 'login.display'|trans({}, 'navigationui') }} >>
+        &lt;&lt; {{ 'login.display'|trans({}, 'navigationui') }}
       </a>
     </div>
     
